Added interface ShortCircuitable Added test